<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearLayoutOtpMainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="40dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTxtCustomerFirstName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/grey"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTxtCustomerLastName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/grey"
                android:textSize="20sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/editTxtOtp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/otp"
            android:inputType="phone"
            android:maxLength="6"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/grey"
            android:textSize="20sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/confirm"
            android:background="@drawable/button_login_design"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutOtpProgressBar"
        android:gravity="center"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textAlignment="center"
            android:padding="10dp"
            android:text="हम प्रसंस्करण कर रहे हैं। कृपया प्रतीक्षा करें ..."/>

    </LinearLayout>


</LinearLayout>