<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shubham.lamamia_project.InstructorCourseEditActivity"
    android:orientation="vertical">

    <EditText
    android:id="@+id/courseIdHolder"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"/>

    <EditText
        android:id="@+id/category_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/errorMessage"
        android:textColor="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/course_name"
                    android:textColor="@color/colorPrimary" />
                <EditText
                    android:id="@+id/courseName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_box_style"
                    android:padding="5dp"
                    android:inputType="text"
                    android:hint="@string/course_name"/>
                <TextView
                    android:id="@+id/courseNameNa"
                    android:textSize="12sp"
                    android:textColor="@color/red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/description"
                    android:textColor="@color/colorPrimary" />
                <TextView
                    android:id="@+id/courseDescriptionNa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textSize="12sp" />
                <EditText
                    android:id="@+id/courseDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_box_style"
                    android:lines="5"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:gravity="top|start"
                    android:scrollbars="vertical"
                    android:padding="5dp" />

                <Button
                    android:id="@+id/updateCourseButton"
                    android:text="update course"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:background="@color/colorPrimaryDark"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/processing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_message"
            android:textColor="@color/colorPrimary"
            />

        <Button
            android:id="@+id/reload"
            android:text="RELOAD"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
